--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,12 +65,22 @@
             android:src="@drawable/ic_bluetooth" />
 
         <ImageButton
-            android:id="@+id/btn_switch"
+            android:id="@+id/btn_voice_control"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:layout_centerVertical="true"
             android:layout_marginEnd="8dp"
             android:layout_toStartOf="@id/btn_bluetooth"
+            android:background="@drawable/button_background"
+            android:src="@drawable/ic_voice" />
+
+        <ImageButton
+            android:id="@+id/btn_switch"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="8dp"
+            android:layout_toStartOf="@id/btn_voice_control"
             android:background="@drawable/button_background"
             android:src="@drawable/ic_switch" />
 
