--- a/app/src/main/res/drawable/bg_button_speech.xml
+++ b/app/src/main/res/drawable/bg_button_speech.xml
@@ -9,10 +9,10 @@
     </item>
 
     <item
-        android:bottom="4dp"
-        android:left="4dp"
-        android:right="4dp"
-        android:top="4dp">
+        android:bottom="@dimen/_4dp"
+        android:left="@dimen/_4dp"
+        android:right="@dimen/_4dp"
+        android:top="@dimen/_4dp">
         <shape android:shape="oval">
             <solid android:color="#FF5722" />
         </shape>
