--- a/app/src/main/res/drawable/bg_corner.xml
+++ b/app/src/main/res/drawable/bg_corner.xml
@@ -4,19 +4,19 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#bb3F51B5 " />
-            <corners android:radius="48dp" />
+            <corners android:radius="@dimen/_48dp" />
             <!--shadow Color-->
         </shape>
     </item>
 
     <item
-        android:bottom="8dp"
-        android:left="8dp"
-        android:right="8dp"
-        android:top="8dp">
+        android:bottom="@dimen/_8dp"
+        android:left="@dimen/_8dp"
+        android:right="@dimen/_8dp"
+        android:top="@dimen/_8dp">
         <shape android:shape="rectangle">
             <solid android:color="#3F51B5" />
-            <corners android:radius="48dp" />
+            <corners android:radius="@dimen/_48dp" />
         </shape>
 
     </item>
