--- a/app/src/main/res/drawable/button_press_border.xml
+++ b/app/src/main/res/drawable/button_press_border.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="10dp"
+        android:width="@dimen/_8dp"
         android:color="#999999" />
     <corners android:radius="200dp" />
     <solid
