--- a/app/src/main/res/drawable/button_transparent.xml
+++ b/app/src/main/res/drawable/button_transparent.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="4dp"
+        android:width="@dimen/_4dp"
         android:color="#55000000" />
     <corners android:radius="200dp" />
     <solid
