--- a/app/src/main/res/drawable/button_unpress.xml
+++ b/app/src/main/res/drawable/button_unpress.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="1dp"
+        android:width="@dimen/_4dp"
         android:color="#FAFAFA" />
     <corners android:radius="200dp" />
     <solid android:color="#FAFAFA" />
