--- a/app/src/main/res/drawable/ic_voice_big.xml
+++ b/app/src/main/res/drawable/ic_voice_big.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
+    android:width="@dimen/_48dp"
+    android:height="@dimen/_48dp"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
