--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,11 @@
     <RelativeLayout
         android:id="@+id/layout_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginBottom="24dp"
+        android:layout_height="@dimen/_60dp"
+        android:layout_marginBottom="@dimen/_24dp"
         android:background="#bb000000"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp">
+        android:paddingStart="@dimen/_8dp"
+        android:paddingEnd="@dimen/_8dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -27,10 +27,10 @@
 
         <ImageButton
             android:id="@+id/btn_help"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="@dimen/_44dp"
+            android:layout_height="@dimen/_44dp"
             android:layout_centerVertical="true"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/_8dp"
             android:layout_toEndOf="@id/btn_more"
             android:background="@drawable/button_background"
             android:src="@drawable/ic_help"
@@ -38,10 +38,10 @@
 
         <ImageButton
             android:id="@+id/btn_info"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="@dimen/_44dp"
+            android:layout_height="@dimen/_44dp"
             android:layout_centerVertical="true"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/_8dp"
             android:layout_toEndOf="@id/btn_help"
             android:background="@drawable/button_background"
             android:src="@drawable/ic_info"
@@ -49,16 +49,16 @@
 
         <ImageButton
             android:id="@+id/btn_more"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="@dimen/_44dp"
+            android:layout_height="@dimen/_44dp"
             android:layout_centerVertical="true"
             android:background="@drawable/button_background"
             android:src="@drawable/ic_more" />
 
         <ImageButton
             android:id="@+id/btn_bluetooth"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="@dimen/_44dp"
+            android:layout_height="@dimen/_44dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@drawable/button_background"
@@ -66,20 +66,20 @@
 
         <ImageButton
             android:id="@+id/btn_voice_control"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="@dimen/_44dp"
+            android:layout_height="@dimen/_44dp"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/_8dp"
             android:layout_toStartOf="@id/btn_bluetooth"
             android:background="@drawable/button_background"
             android:src="@drawable/ic_voice" />
 
         <ImageButton
             android:id="@+id/btn_switch"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
+            android:layout_width="@dimen/_44dp"
+            android:layout_height="@dimen/_44dp"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/_8dp"
             android:layout_toStartOf="@id/btn_voice_control"
             android:background="@drawable/button_background"
             android:src="@drawable/ic_switch" />
@@ -89,9 +89,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp">
+        android:layout_margin="@dimen/_8dp"
+        android:paddingStart="@dimen/_32dp"
+        android:paddingEnd="@dimen/_32dp">
 
         <RelativeLayout
             android:id="@+id/layout_joystick"
@@ -106,31 +106,30 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="32dp"
             android:gravity="center"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp">
+            android:paddingStart="@dimen/_32dp"
+            android:paddingEnd="@dimen/_32dp">
 
             <LinearLayout
                 android:id="@+id/layout_action"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/_24dp"
                 android:orientation="horizontal">
 
                 <ImageButton
                     android:id="@+id/btn_light"
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
-                    android:layout_marginEnd="36dp"
+                    android:layout_width="@dimen/_140dp"
+                    android:layout_height="@dimen/_140dp"
+                    android:layout_marginEnd="@dimen/_36dp"
                     android:background="@drawable/button_background_border"
                     android:src="@drawable/ic_lightbulb_big" />
 
                 <ImageButton
                     android:id="@+id/btn_horn"
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
+                    android:layout_width="@dimen/_140dp"
+                    android:layout_height="@dimen/_140dp"
                     android:background="@drawable/button_background_border"
                     android:src="@drawable/ic_volume_big" />
             </LinearLayout>
@@ -141,49 +140,47 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@id/layout_action"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="24dp"
+                android:layout_marginBottom="@dimen/_24dp"
                 android:orientation="horizontal">
 
                 <FrameLayout
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginEnd="36dp">
+                    android:layout_width="@dimen/_80dp"
+                    android:layout_height="@dimen/_80dp"
+                    android:layout_marginEnd="@dimen/_36dp">
 
                     <ImageButton
                         android:id="@+id/btn_drive"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="@dimen/_80dp"
+                        android:layout_height="@dimen/_80dp"
                         android:background="@drawable/button_orange" />
 
                     <TextView
                         android:id="@+id/tv_countdown_drive"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="@dimen/_80dp"
+                        android:layout_height="@dimen/_80dp"
                         android:background="@drawable/button_transparent"
                         android:gravity="center"
-                        android:padding="24dp"
                         android:textColor="@android:color/white"
                         android:textSize="24sp"
                         android:visibility="gone" />
                 </FrameLayout>
 
                 <FrameLayout
-                    android:layout_width="80dp"
-                    android:layout_height="80dp">
+                    android:layout_width="@dimen/_80dp"
+                    android:layout_height="@dimen/_80dp">
 
                     <ImageButton
                         android:id="@+id/btn_speed"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="@dimen/_80dp"
+                        android:layout_height="@dimen/_80dp"
                         android:background="@drawable/button_purple" />
 
                     <TextView
                         android:id="@+id/tv_countdown_speed"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="@dimen/_80dp"
+                        android:layout_height="@dimen/_80dp"
                         android:background="@drawable/button_transparent"
                         android:gravity="center"
-                        android:padding="24dp"
                         android:textColor="@android:color/white"
                         android:textSize="24sp"
                         android:visibility="gone" />
@@ -196,22 +193,22 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@id/layout_action"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="24dp"
+                android:layout_marginBottom="@dimen/_24dp"
                 android:orientation="horizontal"
                 android:visibility="invisible">
 
                 <ImageButton
                     android:id="@+id/btn_swap_ver"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginEnd="36dp"
+                    android:layout_width="@dimen/_80dp"
+                    android:layout_height="@dimen/_80dp"
+                    android:layout_marginEnd="@dimen/_36dp"
                     android:background="@drawable/button_background"
                     android:src="@drawable/ic_swap_vert" />
 
                 <ImageButton
                     android:id="@+id/btn_swap_horiz"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="@dimen/_80dp"
+                    android:layout_height="@dimen/_80dp"
                     android:background="@drawable/button_background"
                     android:src="@drawable/ic_swap_horiz" />
             </LinearLayout>
