--- a/app/src/main/res/layout/activity_voice_control.xml
+++ b/app/src/main/res/layout/activity_voice_control.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#9C27B0"
     android:orientation="vertical"
-    tools:context=".ui.bluetooth.BluetoothActivity">
+    tools:context=".ui.voicecontrol.VoiceControlActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,122 +35,145 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/_48dp"
+                android:layout_marginEnd="96dp"
+                android:background="@drawable/bg_corner"
+                android:orientation="vertical"
+                android:padding="@dimen/_24dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_4dp"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_4dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_8dp"
+                        android:text="@string/input"
+                        android:textColor="#FFC107"
+                        android:textSize="21sp" />
+
+                    <TextView
+                        android:id="@+id/tv_input"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
+                        android:textSize="21sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_4dp"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_4dp">
+
+                    <TextView
+                        android:id="@+id/tv_command"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_8dp"
+                        android:text="@string/command"
+                        android:textColor="#FFC107"
+                        android:textSize="21sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
+                        android:textSize="21sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_4dp"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_4dp"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_8dp"
+                        android:text="@string/input"
+                        android:textColor="#FFC107"
+                        android:textSize="21sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
+                        android:textSize="21sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/iv_rms"
+                android:layout_width="@dimen/_96dp"
+                android:layout_height="@dimen/_96dp"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="@dimen/_48dp"
+                android:background="@drawable/bg_button_speech_transparent"
+                android:padding="@dimen/_24dp" />
+
+            <ImageView
+                android:id="@+id/iv_listen"
+                android:layout_width="@dimen/_96dp"
+                android:layout_height="@dimen/_96dp"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="@dimen/_48dp"
+                android:background="@drawable/bg_button_speech"
+                android:padding="@dimen/_24dp"
+                android:src="@drawable/ic_voice_big" />
+
+            <ToggleButton
+                android:id="@+id/toggle_speak"
+                style="@style/toggleButton"
+                android:layout_width="@dimen/_96dp"
+                android:layout_height="@dimen/_96dp"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="@dimen/_48dp"
+                android:background="#00000000" />
+
+        </FrameLayout>
+
+        <ImageButton
+            android:id="@+id/btn_execute_command"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/_48dp"
-            android:layout_marginEnd="96dp"
-            android:background="@drawable/bg_corner"
-            android:orientation="vertical"
-            android:padding="@dimen/_24dp">
+            android:layout_marginBottom="@dimen/_32dp"
+            android:background="@drawable/button_background_border"
+            android:paddingStart="@dimen/_48dp"
+            android:paddingTop="@dimen/_8dp"
+            android:paddingEnd="@dimen/_48dp"
+            android:paddingBottom="@dimen/_8dp"
+            android:src="@drawable/ic_execute"
+            android:tint="@color/colorPrimaryDark" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_4dp"
-                android:orientation="horizontal"
-                android:padding="@dimen/_4dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_8dp"
-                    android:text="@string/input"
-                    android:textColor="#FFC107"
-                    android:textSize="21sp" />
-
-                <TextView
-                    android:id="@+id/tv_input"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:textSize="21sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_4dp"
-                android:orientation="horizontal"
-                android:padding="@dimen/_4dp"
-                android:visibility="gone">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_8dp"
-                    android:text="@string/input"
-                    android:textColor="#FFC107"
-                    android:textSize="21sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:textSize="21sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_4dp"
-                android:orientation="horizontal"
-                android:padding="@dimen/_4dp"
-                android:visibility="gone">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_8dp"
-                    android:text="@string/input"
-                    android:textColor="#FFC107"
-                    android:textSize="21sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:textSize="21sp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/iv_rms"
-            android:layout_width="@dimen/_96dp"
-            android:layout_height="@dimen/_96dp"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="@dimen/_48dp"
-            android:background="@drawable/bg_button_speech_transparent"
-            android:padding="@dimen/_24dp" />
-
-        <ImageView
-            android:id="@+id/iv_listen"
-            android:layout_width="@dimen/_96dp"
-            android:layout_height="@dimen/_96dp"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="@dimen/_48dp"
-            android:background="@drawable/bg_button_speech"
-            android:padding="@dimen/_24dp"
-            android:src="@drawable/ic_voice_big" />
-
-        <ToggleButton
-            android:id="@+id/toggle_speak"
-            style="@style/toggleButton"
-            android:layout_width="@dimen/_96dp"
-            android:layout_height="@dimen/_96dp"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="@dimen/_48dp"
-            android:background="#00000000" />
-
-    </FrameLayout>
+    </LinearLayout>
 
 </LinearLayout>
