--- a/app/src/main/res/drawable/button_press_border.xml
+++ b/app/src/main/res/drawable/button_press_border.xml
@@ -1,10 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="@dimen/_8dp"
+        android:width="@dimen/_4dp"
         android:color="#999999" />
     <corners android:radius="200dp" />
-    <solid
-        android:color="#AAAAAA"
-        />
+    <solid android:color="#AAAAAA" />
 </shape>
